[package]
name = "game-dev"
version = "0.1.0"
authors = ["hsnavarro <ricksnavarro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dependencies.sdl2]
version = "0.34.4"
default-features = false
features = ["gfx"]